unpackaged/main/default/objects/Relacion_Producto_Plaza__c/Relacion_Producto_Plaza__c.object-meta.xml
<CustomObject>
    <label>Plaza</label>
    <nameField>
        <label>Nombre de la Relacion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plazas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>