unpackaged/main/default/objects/Relacion_Producto_Plaza__c/fields/Check_actualizacion__c.field-meta.xml
<CustomField>
    <fullName>Check_actualizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check actualización</label>
    <type>Checkbox</type>
</CustomField>