unpackaged/main/default/objects/Relacion_Producto_Plaza__c/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <displayFormat>RZP-{000000}</displayFormat>
    <label>Folio</label>
    <type>AutoNumber</type>
</CustomField>