unpackaged/main/default/objects/Relacion_Producto_Plaza__c/fields/Plaza2__c.field-meta.xml
<CustomField>
    <fullName>Plaza2__c</fullName>
    <formula>HYPERLINK(&quot;https://javer--preprod.sandbox.lightning.force.com/lightning/r/Relacion_Producto_Plaza__c/&quot;&amp; Id &amp; &quot;/view&quot;, Folio__c &amp; &quot; - &quot; &amp; Plaza__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza</label>
    <type>Text</type>
</CustomField>