unpackaged/main/default/objects/Relacion_Producto_Plaza__c/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaza</label>
    <referenceTo>Plaza__c</referenceTo>
    <relationshipName>Relaci_n_Productos_Plazas</relationshipName>
    <type>Lookup</type>
</CustomField>