unpackaged/main/default/objects/Relacion_Producto_Plaza__c/fields/Tiene_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Fraccionamiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Fraccionamiento</label>
    <type>Checkbox</type>
</CustomField>