unpackaged/main/default/objects/Relacion_Producto_Plaza__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Plaza2__c</columns>
    <columns>Plaza__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>